added favorite links and image of cake

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -47,7 +47,18 @@
         <img src="img/candy.jpeg" alt="A photo of Candy.">
       </a>
     </li>
+    <li>Cake
+      <img src="img/cake.jpg" alt="A photo of cake.">
+    </li>
   </ul>
+
+  <p>Here are some of my favorite websites</p>
+  <ul>
+    <li><a href="http://wwww.bandcamp.com"><strong>Bandcamp</strong></a></li>
+    <li><a href="http://wwww.youtube.com"><em>Youtube</em></a></li>
+    <li><a href="http://wwww.wikipedia.com"><strong><em>Wikipedia</em></strong></a></li>
+  </ul>
+
 
   <p>Thanks for reading about me!</p>
 </body>
