added inline elements to the coding list

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -13,8 +13,8 @@
   <p>Isn't it nice?</p>
   <p>Here are some things I'm going to learn about coding:</p>
   <ul>
-    <li>HTML</li>
-    <li>CSS</li>
+    <li><strong>HTML</strong></li>
+    <li><em>CSS</em></li>
     <li>JavaScript</li>
     <li>And a lot more!</li>
   </ul>
