added links to Drew, and tuxedo cat information

--- a/cat.html
+++ b/cat.html
@@ -8,7 +8,9 @@
 <body>
   <h1>Homer, the Cat</h1>
   <h2>About Me</h2>
-  <p>My name is Homer, the cat. My owner's name is Drew Dunn-rankin. I am a tuxedo cat. I love to play with trash!</p>
+  <p>My name is Homer, the cat. My owner's name is <a href="ddr.html">Drew Dunn-rankin</a>. I am a <a
+      href="https://www.thesprucepets.com/about-tuxedo-cats-554695"><strong><em>tuxedo cat</em></strong></a>. I love
+    to play with trash!</p>
   <img
     src="https://images.unsplash.com/photo-1547468137-1ad02f558bec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80"
     alt="">
