--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,11 +2,12 @@
 <html lang="en-US">
 
 <head>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <title>Web page #1</title>
 </head>
 
 <body>
-  <h1>My first strong web page</h1>
+  <h1>My first web page</h1>
   <h2>Written with the guidance of <em>Epicodus</em></h2>
 
   <p>This is my <strong>first web page</strong>!</p>
