linked main and individual css stylesheets

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -2,6 +2,8 @@
 <html lang="en-US">
 
 <head>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/styles-myfavoritethings.css" type="text/css">
   <title>Michael's favorite things</title>
 </head>
 
@@ -54,7 +56,7 @@
 
   <p>Here are some of my favorite websites</p>
   <ul>
-    <li><a href="http://wwww.bandcamp.com"><strong>Bandcamp</strong></a></li>
+    <li><a href="http://wwww.bandcamp.com"><strong>Banlsdcamp</strong></a></li>
     <li><a href="http://wwww.youtube.com"><em>Youtube</em></a></li>
     <li><a href="http://wwww.wikipedia.com"><strong><em>Wikipedia</em></strong></a></li>
   </ul>
@@ -64,3 +66,8 @@
 </body>
 
 </html>
+
+<ul>
+  <li>this is an example</li>
+  <li>this is a</li>
+</ul>
